--- a/hotsprings/index.html
+++ b/hotsprings/index.html
@@ -20,12 +20,12 @@
     </header>
   <div class="hero-text">
     <h1>Hot Springs, Arkansas</h1>
-    <button><a href="toDo.html">Explore more</a></button>
   </div>
 </div>
     <section>
+      <h2> Jewel of Arkansas </h2>
     <p>Hot Springs is located in the Ouachita Mountains of Arkansas. It is most famous for its naturally heated springs, especially those in the Hot Springs National Park. The national park is also home to Bathhouse Row which includes 8 bathhouses from the 19th and 20th centuries. The city has a rich history from the native americans who first inhabited it to the gangsters who used it as neutral territory in the 1930s. It has hosted everything from illegal gambling to MLB training. </p>
-      <img src="images/map.png" alt="map"class="map">
+      <img src="images/map.png" alt="map" class="map">
     </section>
     
     <div class="faq">
@@ -37,15 +37,15 @@
             <p>Who is Bill Clinton?</p>
         </div>
     <footer>
-      <logo>
+      <i>
          <img src="images/logo2.png" alt="logo" class="logo">
-      </logo>
+      </i>
       <p>Copyright &copy; 2022, Website designed by Debora Marinca</p>
       <div class="icons">
       <ul>
         <li><a href="https://www.facebook.com/cityofhotsprings" aria-label="Facebook" class="fa fa-facebook"></a></li>
         <li><a href="https://twitter.com/hotspringsgov" aria-label="Twitter" class="fa fa-twitter"></a></li>
-        <li><a href="https://www.youtube.com/channel/UCvSlS0dSXw_50XhzT9E_kMA" aria-label="Youtube" class="fa fa-youtube"></a></i></li>
+        <li><a href="https://www.youtube.com/channel/UCvSlS0dSXw_50XhzT9E_kMA" aria-label="Youtube" class="fa fa-youtube"></a></li>
       </ul>
       </div>
     </footer>
