--- a/hotsprings/contact.html
+++ b/hotsprings/contact.html
@@ -28,28 +28,28 @@
       <input type="text" name="Last-name" placeholder="Last Name">
       </div>
       <div>
-      <input type="email" name="Email"placeholder="Email Address">
+      <input type="email" name="Email" placeholder="Email Address">
       </div>
       <div>
-      <input type="text" name="phone number"placeholder="Phone Number">
+      <input type="text" name="phone number" placeholder="Phone Number">
       </div>
       <div>
         <textarea name="message" placeholder="Message"></textarea>
       </div>
     </form>
-    <br></br>
+    <br>
     <input type="submit" name="submit" value="Submit">
     </div>
     <footer>
-      <logo>
+      <i>
          <img src="images/logo2.png" alt="logo" class="logo">
-      </logo>
+      </i>
       <p>Copyright &copy; 2022, Website designed by Debora Marinca</p>
       <div class="icons">
       <ul>
         <li><a href="https://www.facebook.com/cityofhotsprings" aria-label="Facebook" class="fa fa-facebook"></a></li>
         <li><a href="https://twitter.com/hotspringsgov" aria-label="Twitter" class="fa fa-twitter"></a></li>
-        <li><a href="https://www.youtube.com/channel/UCvSlS0dSXw_50XhzT9E_kMA" aria-label="Youtube" class="fa fa-youtube"></a></i></li>
+        <li><a href="https://www.youtube.com/channel/UCvSlS0dSXw_50XhzT9E_kMA" aria-label="Youtube" class="fa fa-youtube"></a></li>
       </ul>
       </div>
     </footer>
