--- a/hotsprings/contact.html
+++ b/hotsprings/contact.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    
+//header
    <header>
     <nav>
           <ul>
@@ -18,9 +18,10 @@
           </ul>
         </nav>
     </header>
+//contact form
+    <form>
     <div class="Contact">
      <h2 class="contactus">Contact Us For More Information</h2>
-    <form>
       <div>
       <input type="text" name="first-name" placeholder="First Name">
       </div>
@@ -36,10 +37,12 @@
       <div>
         <textarea name="message" placeholder="Message"></textarea>
       </div>
-    </form>
     <br>
     <input type="submit" name="submit" value="Submit">
     </div>
+    </form>
+
+//footer
     <footer>
       <i>
          <img src="images/logo2.png" alt="logo" class="logo">
