--- a/hotsprings/index.html
+++ b/hotsprings/index.html
@@ -8,34 +8,39 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-     <div class="hero-image">
-    <header>
-    <nav>
-          <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="toDo.html">Attractions</a></li>
-         <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-    </header>
-  <div class="hero-text">
-    <h1>Hot Springs, Arkansas</h1>
-  </div>
-</div>
+//hero image and header
+<figure class="hero-image">
+      <header>
+        <nav>
+              <ul>
+             <li><a href="index.html">Home</a></li>
+             <li><a href="toDo.html">Attractions</a></li>
+             <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </nav>
+        </header>
+    <div class="hero-text">
+      <h1>Hot Springs, Arkansas</h1>
+    </div>
+  </figure>
+//summary
     <section>
       <h2> Jewel of Arkansas </h2>
     <p>Hot Springs is located in the Ouachita Mountains of Arkansas. It is most famous for its naturally heated springs, especially those in the Hot Springs National Park. The national park is also home to Bathhouse Row which includes 8 bathhouses from the 19th and 20th centuries. The city has a rich history from the native americans who first inhabited it to the gangsters who used it as neutral territory in the 1930s. It has hosted everything from illegal gambling to MLB training. </p>
       <img src="images/map.png" alt="map" class="map">
     </section>
-    
+//faq
+  <aside>
     <div class="faq">
-            <h1>The Arlington Hotel had a suite for this American Gangster.</h1>
+            <h2>The Arlington Hotel had a suite for this American Gangster.</h2>
             <p>Who is Al Capone?</p>
-        </div>
+    </div>
     <div class="faq">
-            <h1>Hot Springs is the hometown of this former President.</h1>
+            <h2>Hot Springs is the hometown of this former President.</h2>
             <p>Who is Bill Clinton?</p>
-        </div>
+    </div>
+  </aside>
+//footer
     <footer>
       <i>
          <img src="images/logo2.png" alt="logo" class="logo">
