--- a/hotsprings/toDo.html
+++ b/hotsprings/toDo.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+//header
    <header>
     <nav>
           <ul>
@@ -17,6 +18,8 @@
           </ul>
         </nav>
     </header>
+//slider
+    <figure>
   <div class="slider">
       <span id="slide-1"></span>
       <span id="slide-2"></span>
@@ -32,6 +35,9 @@
         <a href="#slide-3" aria-label="slide3"></a>
       </div>
     </div>
+    </figure>
+//Attractions
+<article>
    <div class="row">
     <div class="column">
     <h2>Hot Springs National Park</h2>
@@ -51,7 +57,9 @@
       <p>Price: $38-$94</p>
       <p>Age: 10+</p>
     </div>
-   </div>
+  </div>
+  </article>
+//footer
     <footer>
       <i>
          <img src="images/logo2.png" alt="logo" class="logo">
